--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Shop gấu bông</title>
+    <base href="%REACT_APP_PUBLIC_URL%/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
